<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.ib.microservices</groupId>
    <artifactId>microservices-reactor</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>com.ib.microservices:microservices-reactor</name>

    <parent>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-parent</artifactId>
            <version>1.2.7.RELEASE</version>
            <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <docker.image.prefix>justindav1s</docker.image.prefix>
        <maven.build.timestamp.format>yyMMdd-HHmmss</maven.build.timestamp.format>
        <jvm.settings>-XX:PermSize=256m -Xmx512m -Djava.security.egd=file:/dev/./urandom</jvm.settings>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:justindav1s/spring-boot-cloud-docker.git</connection>
        <developerConnection>scm:git:git@github.com:justindav1s/spring-boot-cloud-docker.git</developerConnection>
    </scm>

    <modules>
        <module>basket</module>
        <module>payment</module>
        <module>product</module>
        <module>eureka</module>
	    <module>config</module>
        <module>zuul</module>
        <module>commercial-model</module>
        <module>hystrix</module>
        <module>turbine</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.1.3</version>
        </dependency>
    </dependencies>

        <dependencyManagement>
                <dependencies>
                        <dependency>
                                <groupId>org.springframework.cloud</groupId>
                                <artifactId>spring-cloud-starter-parent</artifactId>
                                <version>Angel.SR3</version>
                                <type>pom</type>
                                <scope>import</scope>
                        </dependency>
                </dependencies>
        </dependencyManagement>

</project>
